--- a/src/views/_includes/blocks/discounts.pug
+++ b/src/views/_includes/blocks/discounts.pug
@@ -23,12 +23,12 @@ section.discounts
                   picture
                   source(media="(min-width: 1920px)", srcset="assets/img/discounts/cursor-lg.png", type="image/png")
                   source(media="(min-width: 1280px)", srcset="assets/img/discounts/cursor.png", type="image/png")
-                  img(src="assets/img/discounts/cursor-lg.png", alt="cursor").discounts__hover-cursor
+                  img(src="assets/img/discounts/cursor-lg.png", alt="cursor").discounts__hover-cursor.hover-cursor
               .swiper-slide.discounts__swiper-slide
                 .discounts__card.customcursor
                   //- .discounts__hover-block
                   //-     .discounts__hover-wrap
-                  picture.discounts__hover-cursor
+                  picture.discounts__hover-cursor.hover-cursor
                     source(media="(min-width: 1920px)", srcset="assets/img/discounts/cursor-lg.png", type="image/png")
                     source(media="(min-width: 1280px)", srcset="assets/img/discounts/cursor.png", type="image/png")
                     img(src="assets/img/discounts/cursor-lg.png", alt="cursor")
