--- a/src/scss/product.scss
+++ b/src/scss/product.scss
@@ -19,7 +19,11 @@
 @import "components/header";
 @import "components/product/product-hero";
 @import "components/benefits";
+@import "components/product/product-benefits";
 @import "components/product/chars";
+@import "components/bonuses";
+@import "components/product/projects";
+@import "components/product/questions";
 @import "components/models";
 @import "components/social";
 @import "components/footer";
