--- a/src/views/_includes/blocks/product/chars.pug
+++ b/src/views/_includes/blocks/product/chars.pug
@@ -3,7 +3,7 @@ section.chars
         .chars__expand-button.title Характеристики
         .chars__expand
             .swiper-container.chars__swiper-container
-                .swiper-wrapper
+                .swiper-wrapper.chars__swiper-wrapper
                     .swiper-slide.chars__swiper-slide
                         .chars__block
                             .chars__info
