--- a/src/scss/components/product/_product-media.scss
+++ b/src/scss/components/product/_product-media.scss
@@ -52,6 +52,49 @@
         }
     }
 
+    // benefits2-768
+    .productBenefits2 {
+        background-color: #fff;
+
+        .benefits {
+            &__swiper-slide {
+                max-width: none;
+                width: 1300px !important;
+            }
+
+            &__card {
+                height: 247px;
+
+                &:nth-child(2) {
+                    width: 465px;
+                    padding-left: 90px;
+                }
+
+                &:nth-child(1) {
+                    border: none;
+                    width: 384px;
+                    padding-left: 0;
+                }
+
+                &:nth-child(3) {
+                    width: 346px;
+                    padding-left: 62px;
+                }
+
+                &-title {
+                    max-width: 330px;
+                    margin-bottom: 26px;
+                }
+
+                &-description {
+                    width: 284px !important;
+                }
+            }
+
+
+        }
+    }
+
     // chars-768
     .chars {
         background-color: #fff;
@@ -59,12 +102,36 @@
         &__swiper {
             &-slide {
                 display: flex;
-                width: 920px !important;
+                width: 1500px !important;
             }
+
+            &-scrollbar {
+                display: block !important;
+            }
+
+            &-wrapper {
+                padding-bottom: 29px;
+            }
+
+        }
+
+        &__info {
+            height: 63px;
         }
 
         &__block {
             margin-right: 60px;
+
+            &:nth-child(3) {
+                .chars__info {
+                    &:nth-child(1) {
+                        .chars__info-description {
+
+                            max-width: none;
+                        }
+                    }
+                }
+            }
         }
 
         &__container {
@@ -74,6 +141,11 @@
         &__expand {
             &-button {
                 font-size: 36px;
+
+                &::after {
+                    font-size: 30px;
+                    font-weight: normal;
+                }
             }
         }
 
@@ -91,8 +163,152 @@
             &__swiper-scrollbar {
                 display: none;
             }
+
+            &__swiper-wrapper {
+                padding-bottom: 14px;
+            }
         }
 
+    }
+
+    // projects-768
+    .projects {
+        background-color: #fff;
+
+        .bonuses {
+            &__card {
+                height: 100%;
+                width: 100%;
+            }
+
+            &__swiper-slide {
+                width: 673.06px !important;
+                height: 386px !important;
+                position: relative;
+            }
+
+            &__swiper-button {
+
+                &-next,
+                &-prev {
+                    top: 450px;
+                }
+            }
+
+            &__button {
+                top: -116px;
+            }
+        }
+
+        &__info {
+            background: rgba(255, 255, 255, 0.85);
+            position: absolute;
+            top: 12px;
+            left: 7px;
+            z-index: 10;
+            width: 365px;
+            height: 269px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            // align-items: center;
+            padding-left: 20px;
+            padding-right: 20px;
+
+            &-name {
+                font-size: 16px;
+                line-height: 120.3%;
+                /* or 19px */
+
+                letter-spacing: 0.105em;
+                width: 291px;
+                margin-bottom: 21px;
+            }
+
+            &-description {
+                background: #FFFFFF;
+                padding: 19px 30px;
+                width: 326px;
+                font-size: 12px;
+                line-height: 140%;
+                /* or 17px */
+                letter-spacing: 0.035em;
+                color: #666666;
+
+
+            }
+        }
+
+        &__stats {
+            &-block {
+                margin-right: 25px;
+            }
+
+            &-number {
+                font-size: 30px;
+                line-height: 37px;
+            }
+
+            &-label {
+                font-size: 12px;
+                line-height: 120.3%;
+            }
+        }
+    }
+
+    // questions-768
+    .questions {
+        background-color: #fff;
+
+        &__title {
+            margin-left: 50px;
+            margin-bottom: 56px;
+        }
+
+        &__container {
+            max-width: 768px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        &__leader {
+            max-width: 768px;
+            margin-left: auto;
+            margin-right: auto;
+
+            &-block {
+                margin-left: 50px;
+            }
+
+            &-text {
+                font-size: 14px;
+            }
+
+            &-name {
+                font-size: 20px;
+            }
+        }
+
+        &__expand {
+            &-button {
+                justify-content: space-between;
+                padding-right: 210px;
+                margin-bottom: 59px;
+                padding-bottom: 32px;
+
+                &::after {
+                    font-size: 30px;
+                    left: 185px;
+                }
+            }
+
+            &-text {
+                width: 543px;
+                margin-left: auto;
+                margin-right: auto;
+                margin-top: 13px;
+            }
+        }
     }
 
 }
@@ -110,6 +326,47 @@
 }
 
 @media (min-width: 1280px) {
+    .chars {
+        &__block {
+            margin-right: 0;
+        }
+
+        &__container {
+            // padding-left: 64px;
+            // padding-right: 55px;
+            max-width: 1170px;
+        }
+
+        &__swiper-scrollbar {
+            display: none !important;
+        }
+
+        &__swiper-wrapper {
+            transform: translate3d(0px, 0, 0) !important;
+        }
+
+        &__swiper-slide {
+            width: 100% !important;
+            justify-content: space-between;
+        }
+    }
+
+    // benefits2-1280
+
+    .productBenefits2 {
+        .benefits {
+            &__swiper {
+                &-wrapper {
+                    transform: translate3d(0px, 0, 0) !important;
+
+                }
+
+                &-container {
+                    overflow: visible;
+                }
+            }
+        }
+    }
 
     // hero-1280
     .productHero {
@@ -170,6 +427,131 @@
         }
     }
 
+    // projects-1280
+    .projects {
+        .bonuses {
+            &__container {
+                max-width: none;
+                padding-left: 57px;
+            }
+
+            &__swiper-slide {
+                width: 1170px !important;
+                height: 671px !important;
+                position: relative;
+            }
+
+            &__swiper-button {
+
+                &-next,
+                &-prev {
+                    top: 81%
+                }
+
+                &-next {
+                    right: 54px;
+                }
+
+                &-prev {
+                    right: 124px;
+                }
+            }
+
+            &__button {
+                top: -126px;
+            }
+        }
+
+        &__info {
+            background: rgba(255, 255, 255, 0.85);
+            position: absolute;
+            top: 27px;
+            left: 32px;
+            width: 454px;
+            height: 308px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            // align-items: center;
+            padding-left: 28px;
+            padding-right: 22px;
+
+            &-name {
+                font-size: 16px;
+                line-height: 120.3%;
+                /* or 19px */
+
+                letter-spacing: 0.105em;
+                width: 291px;
+                margin-bottom: 21px;
+            }
+
+            &-description {
+                background: #FFFFFF;
+                padding: 20px;
+                padding-bottom: 20px;
+                padding-left: 29px;
+                padding-right: 111px;
+                width: 408px;
+                font-size: 12px;
+                line-height: 140%;
+                /* or 17px */
+                letter-spacing: 0.035em;
+                color: #666666;
+
+
+            }
+        }
+
+        &__stats {
+            &-block {
+                margin-right: 57px;
+
+                &:nth-last-child(1) {
+                    margin-right: 0 !important;
+                }
+            }
+
+            &-number {
+                font-size: 40px;
+                line-height: 49px;
+            }
+
+            &-label {
+                font-size: 14px;
+                line-height: 120.3%;
+            }
+        }
+    }
+
+    // questions-1280
+    .questions {
+        display: flex;
+        flex-wrap: wrap;
+        max-width: 1280px;
+        margin-left: auto;
+        margin-right: auto;
+
+        &__title {
+            flex-basis: 100%;
+        }
+
+        &__container {
+            max-width: 713px;
+            margin-top: 70px;
+        }
+
+        &__leader {
+            max-width: none;
+            margin-left: 0;
+
+            &-img {
+                width: 469px;
+                height: 647px;
+            }
+        }
+    }
+
 }
 
 @media (min-width: 1920px) {
@@ -203,4 +585,145 @@
         }
 
     }
+
+    // chars-1920 
+    .chars {
+        &__container {
+            max-width: 1624px;
+        }
+
+        &__expand {
+            &-button {
+                font-size: 60px;
+
+                &::after {
+                    font-size: 40px;
+                }
+            }
+
+        }
+
+        &__info {
+            &-title {
+                font-size: 20px;
+            }
+
+            &-description {
+                font-size: 16px;
+            }
+        }
+
+        &-image {
+            &__swiper-slide {
+                width: 808px !important;
+                height: 73px;
+            }
+        }
+    }
+
+    // projects-1920
+    .projects {
+        .bonuses {
+            &__container {
+                padding-left: 151px;
+            }
+
+            &__swiper-slide {
+                width: 1597px !important;
+                height: 914px !important;
+                margin-right: 50px;
+            }
+
+            &__swiper-button {
+
+                &-next,
+                &-prev {
+                    top: 90%;
+                }
+
+                &-next {
+                    right: 150px;
+                }
+
+                &-prev {
+                    right: 220px;
+                }
+            }
+
+            &__swiper-wrapper {
+                width: 1597px !important;
+            }
+
+            &__button {
+                display: block;
+                padding: 23px 47px;
+                width: fit-content;
+                top: -77px;
+            }
+        }
+
+        &__info {
+            justify-content: start;
+            padding-top: 42px;
+            top: 58px;
+            left: 50px;
+            width: 483px;
+            height: 375px;
+
+            &-name {
+                margin-bottom: 21px;
+            }
+
+            &-description {
+                margin-top: 33px;
+                width: 418px;
+                font-size: 14px;
+                padding-top: 30px;
+                padding-bottom: 30px;
+            }
+        }
+    }
+
+    // questions-1920
+    .questions {
+        max-width: 1920px;
+
+        &__container {
+            max-width: 1028px;
+            // padding-right: 165px;
+            padding-right: 0;
+            margin-right: 165px;
+        }
+
+        &__title {
+            margin-left: 150px;
+        }
+
+        &__leader {
+            &-img {
+                width: 622px;
+                height: 647px;
+            }
+        }
+
+        &__expand {
+            &-button {
+                padding-right: 100px;
+                font-size: 20px;
+
+                &::after {
+                    font-size: 40px;
+                    left: 75px;
+                }
+            }
+
+            &-text {
+                font-size: 16px;
+                width: 736px;
+                margin-left: 40px;
+                margin-bottom: 88px;
+            }
+        }
+    }
+
 }
