--- a/src/scss/product.scss
+++ b/src/scss/product.scss
@@ -24,6 +24,9 @@
 @import "components/bonuses";
 @import "components/product/projects";
 @import "components/product/questions";
+@import "components/product/getProject";
+@import "components/articles";
+@import "components/product/others";
 @import "components/models";
 @import "components/social";
 @import "components/footer";
