--- a/src/views/product.pug
+++ b/src/views/product.pug
@@ -27,6 +27,12 @@ html(lang="ru", class="no-js")
 
                 block questions
                     include _includes/blocks/product/questions
+
+                block getProject
+                    include _includes/blocks/product/getProject
+
+                block others
+                    include _includes/blocks/product/others
                
                
         
