--- a/src/scss/components/product/_getProject.scss
+++ b/src/scss/components/product/_getProject.scss
@@ -69,3 +69,25 @@
         }
     }
 }
+
+.getProject2 {
+    &__container {
+        padding-top: 61px;
+        padding-bottom: 70px;
+    }
+
+    &__title {
+        text-align: center;
+        margin-bottom: 70px;
+
+        span {
+            display: block;
+
+        }
+
+    }
+
+    .mainForm {
+        padding: 0;
+    }
+}
