--- a/src/views/product.pug
+++ b/src/views/product.pug
@@ -33,6 +33,15 @@ html(lang="ru", class="no-js")
 
                 block others
                     include _includes/blocks/product/others
+                
+                block benefits2
+                    include _includes/blocks/product/benefits2
+
+                block bonuses
+                    include _includes/blocks/bonuses
+
+                block getProject2
+                    include _includes/blocks/product/getProject2
                
                
         
