--- a/src/scss/components/product/_questions.scss
+++ b/src/scss/components/product/_questions.scss
@@ -63,19 +63,21 @@
             display: flex;
             align-items: center;
             color: #323232;
-            padding-right: 20px;
+            // padding-right: 20px;
             padding-bottom: 18px;
             border-bottom: 1px solid #D9D9D9;
             margin-bottom: 24px;
+            justify-content: space-between;
 
             &::after {
                 content: '+';
                 font-family: sans-serif;
                 font-weight: 400;
-                margin-left: 11px;
+                float: right;
                 transition: transform 0.1s ease-in-out;
                 font-size: 25px;
                 transition: transform 0.1s ease-in-out;
+                margin-right: 11px;
             }
 
             &--active {
