--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -157,19 +157,53 @@ strong {
         padding-left: 16px;
         // width: 270px;
         width: 100%;
+        padding-bottom: 21px;
+        transition: border-color 0.2s ease-in-out;
+        // margin-bottom: 5px;
+        // &:focus {
+        //     border-color: #000000;
+        // 
 
-        &::placeholder {
-            color: #585858;
-        }
+
 
         &-group {
-            width: 100%;
+            // width: 100%;
+            // display: flex;
+            // justify-content: space-between;
+            // flex-wrap: wrap;
             display: flex;
-            justify-content: space-between;
-            flex-wrap: wrap;
+            flex-direction: column;
+            position: relative;
+            margin-bottom: 5px;
+
+            &:focus-within {
+                .mainForm__label {
+                    bottom: 40px;
+                    font-size: 12px;
+                    color: #181818;
+                }
+
+                .mainForm__input {
+                    border-color: #181818;
+
+                }
+            }
+
         }
     }
+
+    &__label {
+        font-size: 16px;
+        // margin-bottom: 5px;
+        // color: sandybrown;
+        position: absolute;
+        bottom: 21px;
+        left: 16px;
+        color: #585858;
+        transition: bottom 0.2s ease-in-out, font-size 0.2s ease-in-out, color 0.2s ease-in-out;
+    }
 }
+
 
 .button {
     width: 100%;
