--- a/src/scss/components/_contactUs.scss
+++ b/src/scss/components/_contactUs.scss
@@ -13,8 +13,12 @@
     }
 
     &__input {
-        margin-bottom: 28px;
+
         font-size: 16px;
+
+        &-group {
+            margin-bottom: 28px;
+        }
     }
 
     &__button {
