--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -47,8 +47,12 @@
     }
 
     &__input {
-        margin-bottom: 16px;
+        // margin-bottom: 16px;
         font-size: 16px;
+
+        &-group {
+            margin-bottom: 30px;
+        }
     }
 
     &__info {
