--- a/src/views/_includes/blocks/modal.pug
+++ b/src/views/_includes/blocks/modal.pug
@@ -7,8 +7,11 @@
 
     form(action="#").mainForm
       .mainForm__input-group
-        input(type="text", placeholder="Ваше имя").mainForm__input.contactUs__input
-        input(type="phone", placeholder="Ваш телефон").mainForm__input.contactUs__input
+          label(for="modal-user-name").mainForm__label Ваше имя
+          input(type="text", name="user-name").mainForm__input.hero__input#modal-user-name
+      .mainForm__input-group
+           label(for="modal-user-name").mainForm__label Ваш телефон
+           input(type="tel", name="user-tel").mainForm__input.hero__input#modal-user-tel
       button.mainForm__button.button.button--primary.contactUs__button Оставить заявку
     p.policy.contactUs__policy Отправляя контакты, вы соглашаетесь с <a href="#">политикой конфиденциальности</a>
     
