--- a/src/scss/components/_media.scss
+++ b/src/scss/components/_media.scss
@@ -1720,6 +1720,9 @@
 
         &__mainForm {
             width: 475px;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
         }
 
         &__input {
