--- a/src/views/_includes/blocks/product/getProject.pug
+++ b/src/views/_includes/blocks/product/getProject.pug
@@ -4,8 +4,11 @@ section.getProject
         p.getProject__description Обсудите данную модель с дизайнером КухниСити.  <span>Сделаем 3D-проект, расскажем все нюансы модели, как ее приспособить  под ваши нужды и запишем на замер при необходимости.</span>  
         form(action="#").mainForm.getProject__mainForm
             .mainForm__input-group.getProject__input-group
-                input(type="text", placeholder="Ваше имя").mainForm__input.getProject__input
-                input(type="phone", placeholder="Ваш телефон").mainForm__input.getProject__input
+                label(for="gerProject-user-name").mainForm__label Ваше имя
+                input(type="text", id="getProject-user-name").mainForm__input.getProject__input
+            .mainForm__input-group.getProject__input-group
+                label(for="gerProject-user-surname").mainForm__label Ваша фамилия
+                input(type="text", id="getProject-user-surname").mainForm__input.getProject__input
             button.mainForm__button.button.button--dark.getProject__button Получить 3D-проект
             p.policy.getProject__policy Отправляя контакты, вы соглашаетесь с <a href="#">политикой конфиденциальности</a>
             
