--- a/src/views/_includes/blocks/product/getProject2.pug
+++ b/src/views/_includes/blocks/product/getProject2.pug
@@ -3,8 +3,11 @@ section.getProject2
         .title.getProject2__title Получите бесплатный <span>3D-проект</span> 
         form(action="#").mainForm.getProject__mainForm
             .mainForm__input-group.getProject__input-group
-                input(type="text", placeholder="Ваше имя").mainForm__input.getProject__input
-                input(type="phone", placeholder="Ваша фамилия").mainForm__input.getProject__input
+                label(for="gerProject2-user-name").mainForm__label Ваше имя
+                input(type="text", id="getProject2-user-name").mainForm__input.getProject__input
+            .mainForm__input-group.getProject__input-group
+                label(for="gerProject2-user-surname").mainForm__label Ваша фамилия
+                input(type="text", id="getProject2-user-surname").mainForm__input.getProject__input
             button.mainForm__button.button.button--dark.getProject__button Получить 3D-проект
             p.policy.getProject__policy Отправляя контакты, вы соглашаетесь с <a href="#">политикой конфиденциальности</a>
             
