--- a/src/scss/components/vacancies/_vacancies-chars.scss
+++ b/src/scss/components/vacancies/_vacancies-chars.scss
@@ -12,17 +12,21 @@
                 display: flex;
                 align-items: center;
                 // flex-wrap: wrap;
+                padding-right: 10px;
 
                 &::after {
                     margin-left: 10px;
                 }
             }
+
+
         }
 
         &__info {
             &-description {
                 margin-top: 0px;
                 margin-bottom: 20px;
+                max-width: none;
             }
 
             &-title {
@@ -63,5 +67,44 @@
                 left: -18px;
             }
         }
+    }
+
+    &__mainForm {
+        margin-top: 89px;
+    }
+
+    &__input {
+        &-group {
+            margin-bottom: 36px;
+        }
+    }
+
+    &__addFile {
+        font-size: 16px;
+        line-height: 118.49%;
+        /* identical to box height, or 19px */
+        letter-spacing: 0.035em;
+        color: #585858;
+        padding-left: 5px;
+        display: flex;
+        align-items: center;
+        padding-bottom: 20px;
+        border-bottom: 1px dashed #9D9D9D;
+        margin-bottom: 58px;
+        width: 100%;
+
+        &::before {
+            content: '';
+            width: 13px;
+            height: 14px;
+            margin-right: 14px;
+            background: url('../img/vacancies/add-file.svg') no-repeat center / cover;
+            display: inline-block;
+        }
+    }
+
+    &__policy {
+        margin-top: 24px;
+        margin-bottom: 36px;
     }
 }
