--- a/src/views/_includes/blocks/contactUs.pug
+++ b/src/views/_includes/blocks/contactUs.pug
@@ -15,7 +15,7 @@ section.contactUs
           label(for="contactUs-user-name").mainForm__label Ваше имя
           input(type="text", name="user-name").mainForm__input.contactUs__input#contactUs-user-name
       .mainForm__input-group.contactUs__input-group
-          label(for="contactUs-user-name").mainForm__label Ваш телефон
+          label(for="contactUs-user-tel").mainForm__label Ваш телефон
           input(type="tel", name="user-tel").mainForm__input.contactUs__input#contactUs-user-tel
       button.mainForm__button.button.button--primary.contactUs__button Отправить
   p.policy.contactUs__policy Отправляя контакты, вы соглашаетесь с <a href="#">политикой конфиденциальности</a>
