--- a/src/scss/components/vacancies/_vacancies-media.scss
+++ b/src/scss/components/vacancies/_vacancies-media.scss
@@ -18,6 +18,50 @@
             }
         }
     }
+
+    .vacanciesChars {
+        .chars {
+            &__container {
+                max-width: 920px;
+                margin-left: auto;
+                margin-right: auto;
+            }
+
+            &__info {
+                &-description {
+                    max-width: 669px;
+
+                    &:nth-child(1) {
+                        margin-top: 40px;
+                    }
+
+                }
+            }
+        }
+    }
+
+    .vacancy {
+        &__list {
+            font-size: 14px;
+        }
+
+        &__mainForm {
+            justify-content: space-between;
+            display: flex;
+            flex-wrap: wrap;
+        }
+
+        &__input {
+            width: 100%;
+        }
+
+        &__input-group {
+            flex-basis: 49%;
+
+        }
+
+
+    }
 }
 
 @media(min-width: 1280px) {
@@ -33,6 +77,58 @@
             &__title {
                 font-size: 55px;
             }
+        }
+    }
+
+    .vacanciesChars {
+        .chars {
+
+            &__container {
+                max-width: 1280px;
+                padding-left: 50px;
+                padding-right: 50px;
+            }
+
+            &__expand {
+                margin-bottom: 50px;
+
+                &-button {
+                    margin-bottom: 50px;
+                }
+            }
+        }
+    }
+
+    .vacancy {
+        &__mainForm {
+            align-items: center;
+
+        }
+
+        &__input {
+            &-group {
+                &:nth-child(6) {
+                    order: 2;
+                    flex-basis: 100%;
+                }
+            }
+        }
+
+        &__addFile {
+            flex-basis: 49%;
+            top: 13px;
+        }
+
+        &__button {
+            order: 3;
+            width: 372px;
+        }
+
+        &__policy {
+            order: 3;
+            width: 372px;
+            margin-bottom: 150px;
+
         }
     }
 }
@@ -57,6 +153,40 @@
                 font-size: 16px;
                 width: 625px;
             }
+        }
+    }
+
+    .vacanciesChars {
+        .chars {
+            &__container {
+                max-width: 1920px;
+                padding-left: 160px;
+                padding-right: 160px;
+            }
+
+            &__info {
+                &-description {
+                    max-width: 996px;
+                }
+
+                &-title {
+                    margin-bottom: 44px;
+                }
+            }
+        }
+    }
+
+    .vacancy {
+        &__list {
+            font-size: 16px;
+        }
+
+        &__button {
+            width: 505px;
+        }
+
+        &__policy {
+            margin-left: 62px;
         }
     }
 }
